--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,27 +6,13 @@
 
 <body>
   <h1>User List</h1>
-  <table border="1" cellpadding="5">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Username</th>
-        <th>Email</th>
-        <th>Created At</th>
-      </tr>
-    </thead>
-    <tbody>
-      {{#each users}}
-      <tr>
-        <td>{{this.id}}</td>
-        <td>{{this.username}}</td>
-        <td>{{this.email}}</td>
-        <td>{{this.createdAt}}</td>
-      </tr>
-      {{/each}}
-    </tbody>
-  </table>
-  <a href="/">Back to Home</a>
+  {{#each users}}
+    <p>ID: {{this.id}}</p>
+    <p>Username: {{this.username}}</p>
+    <p>Email: {{this.email}}</p>
+    <p>Created At: {{this.createdAt}}</p>
+    <hr>
+  {{/each}}
 </body>
 
 </html>
